# intellij-jsoninja

./: .gitignore  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_ko.md  WARP.md  build.gradle.kts  gradle.properties  package.json  pnpm-lock.yaml  settings.gradle.kts
.claude/: search_tool.md
docs/: DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md  TECHNICAL_SPEC.md  VERSION_UPDATE_GUIDE.md  coroutine-cpu-hotspot-candidates.md  coroutine-threading-audit.md  coroutine-threading-standard.md  (+1 more)
tree-sitter-wasm/: AGENTS.md  Cargo.toml  LICENSE  build.rs
tree-sitter-wasm/.cargo/: config.toml
tree-sitter-wasm/queries/go/: type-declarations.scm
tree-sitter-wasm/queries/kotlin/: type-declarations.scm
tree-sitter-wasm/queries/typescript/: type-declarations.scm
tree-sitter-wasm/src/: diagnostics.rs  error.rs  handle_store.rs  ir.rs  language.rs  lib.rs  memory.rs  parser.rs  query.rs  query_result.rs  runtime_state.rs  source.rs  tests.rs  types.rs  utils.rs
tree-sitter-wasm/src/analyzer/: go.rs  java.rs  kotlin.rs  mod.rs  typescript.rs
tree-sitter-wasm/src/type_parser/: go.rs  java.rs  kotlin.rs  mod.rs  typescript.rs
tree-sitter-wasm/tests/fixtures/go/: analysis.go  expected-analysis.json  expected-captures.txt  sample.go
tree-sitter-wasm/tests/fixtures/java/: expected-analysis.json  expected-captures.txt  sample.java
tree-sitter-wasm/tests/fixtures/kotlin/: expected-analysis.json  expected-captures.txt  sample.kt
tree-sitter-wasm/tests/fixtures/typescript/: analysis.ts  expected-analysis.json  expected-captures.txt  sample.ts
(+309 files in other folders)
