[package]
name = "tree-sitter-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["language-grammars"]
language-grammars = [
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-typescript",
]

[dependencies]
streaming-iterator = "0.1.9"
tree-sitter = "0.24"
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-kotlin-ng = { version = "1.1.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"
